# CHANGELOG - MyMakieThemes

## 2024-09-05 - v0.1.2

* added a new `dark` theme, based on the TUM color `TUMBlueDarker` as the background
* changed both `default` -> `default()` and `dark` -> `dark()` to make them callable
  * the dark theme has a optional argument to set the background color

## 2024-05-05 - v0.1.1

* update to version v0.1.1
* added default color cycle to `default` theme to cycle through the main TUM colors first
* added `CHANGELOG`
* added a testing script for line plots