@@ -1,5 +1,9 @@
 # CHANGELOG - MyMakieThemes
 
+## 2025-03-24
+
+- added `joinstyle=:round` attribute to `lines!` plot
+
 ## 2024-09-05 - v0.1.2
 
 * added a new `dark` theme, based on the TUM color `TUMBlueDarker` as the background
